adding modified cmip6 download file

--- a/Abigails_PANGEO_CMIP6_Download.ipynb
+++ b/Abigails_PANGEO_CMIP6_Download.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "204391f3-bb1e-4124-9441-74b1bac59c2b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "20ba249f-20a6-43ae-81b6-8d855f16403e",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "dbd727d1-e53c-45a6-8a0a-508b1b9b49f3",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "7a46e972-fdc5-4ad4-a393-88011dd106cc",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,17 +168,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "3a3e4bb8-f06a-4147-a1a9-52fc9a1e01e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['HadGEM3-GC31-MM', 'GFDL-ESM4', 'GFDL-CM4', 'IPSL-CM6A-LR',\n",
+       "       'CNRM-CM6-1', 'GISS-E2-1-G', 'GISS-E2-1-H', 'BCC-CSM2-MR',\n",
+       "       'BCC-ESM1', 'CNRM-ESM2-1', 'MIROC6', 'AWI-CM-1-1-MR',\n",
+       "       'EC-Earth3-LR', 'MRI-ESM2-0', 'CESM2-WACCM', 'CESM2',\n",
+       "       'SAM0-UNICON', 'GISS-E2-1-G-CC', 'UKESM1-0-LL', 'EC-Earth3',\n",
+       "       'CanESM5', 'CanESM5-CanOE', 'EC-Earth3-Veg', 'HadGEM3-GC31-LL',\n",
+       "       'MPI-ESM-1-2-HAM', 'NESM3', 'CAMS-CSM1-0', 'MPI-ESM1-2-LR',\n",
+       "       'MPI-ESM1-2-HR', 'MCM-UA-1-0', 'NorESM2-LM', 'FGOALS-g3',\n",
+       "       'FGOALS-f3-L', 'MIROC-ES2L', 'FIO-ESM-2-0', 'NorCPM1', 'NorESM1-F',\n",
+       "       'CNRM-CM6-1-HR', 'ACCESS-CM2', 'NorESM2-MM', 'ACCESS-ESM1-5',\n",
+       "       'IITM-ESM', 'CESM2-FV2', 'CESM2-WACCM-FV2', 'GISS-E2-2-G',\n",
+       "       'GISS-E2-2-H', 'TaiESM1', 'AWI-ESM-1-1-LR', 'CIESM',\n",
+       "       'CMCC-CM2-SR5', 'EC-Earth3-AerChem', 'IPSL-CM5A2-INCA',\n",
+       "       'CMCC-CM2-HR4', 'EC-Earth3-Veg-LR', 'CAS-ESM2-0', 'EC-Earth3-CC',\n",
+       "       'CMCC-ESM2', 'MIROC-ES2H', 'ICON-ESM-LR', 'IPSL-CM6A-LR-INCA'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "##check daily wind data \n"
+    "##check daily wind data \n",
+    "pangeo_data['model'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "0ef67303-629d-4051-8d5b-9125b3ecd4a9",
    "metadata": {},
    "outputs": [
@@ -189,7 +216,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "91b3bfd4-58a4-45fa-aa88-ed1f6241cceb",
    "metadata": {},
    "outputs": [],
@@ -237,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "3ddedbe5-8f1c-4d93-9b81-2b6d5b415291",
    "metadata": {},
    "outputs": [
@@ -255,16 +282,13 @@
     {
      "data": {
       "text/plain": [
-       "model         456\n",
-       "experiment    456\n",
-       "ensemble      456\n",
-       "variable      456\n",
-       "zstore        456\n",
-       "domain        456\n",
-       "dtype: int64"
+       "array(['ACCESS-CM2', 'ACCESS-ESM1-5', 'AWI-CM-1-1-MR', 'AWI-ESM-1-1-LR',\n",
+       "       'BCC-CSM2-MR', 'BCC-ESM1', 'CMCC-ESM2', 'CanESM5', 'GISS-E2-1-G',\n",
+       "       'GISS-E2-1-G-CC', 'GISS-E2-1-H', 'MIROC6', 'MPI-ESM-1-2-HAM',\n",
+       "       'MPI-ESM1-2-HR', 'MPI-ESM1-2-LR', 'MRI-ESM2-0'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,40 +298,184 @@
     "esm_list = pangeo_good_ensembles['model'].unique()\n",
     "print(esm_list)\n",
     "\n",
-    "pangeo_good_ensembles.count()\n"
+    "pangeo_good_ensembles.count()\n",
+    "pangeo_good_ensembles['model'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "id": "8113d936-d02a-4782-ad46-351c71108eec",
    "metadata": {},
    "outputs": [],
    "source": [
     "# pangeo_good_ensembles = pangeo_good_ensembles.iloc[1:2,:]\n",
-    "pangeo_good_ensembles = pangeo_good_ensembles.loc[(pangeo_good_ensembles['model'] == 'ACCESS-CM2')\n",
+    "pangeo_good_ensembles2 = pangeo_good_ensembles.loc[(pangeo_good_ensembles['model'] == 'ACCESS-CM2')\n",
     "                          & (pangeo_good_ensembles['experiment'] == 'historical')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
+   "id": "38032c62-495e-47d4-931d-c0408e83dfab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>experiment</th>\n",
+       "      <th>ensemble</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>zstore</th>\n",
+       "      <th>domain</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "      <td>historical</td>\n",
+       "      <td>r1i1p1f1</td>\n",
+       "      <td>vas</td>\n",
+       "      <td>gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...</td>\n",
+       "      <td>Amon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "      <td>historical</td>\n",
+       "      <td>r1i1p1f1</td>\n",
+       "      <td>uas</td>\n",
+       "      <td>gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...</td>\n",
+       "      <td>Amon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "      <td>historical</td>\n",
+       "      <td>r1i1p1f1</td>\n",
+       "      <td>tasmin</td>\n",
+       "      <td>gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...</td>\n",
+       "      <td>Amon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "      <td>historical</td>\n",
+       "      <td>r1i1p1f1</td>\n",
+       "      <td>tasmax</td>\n",
+       "      <td>gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...</td>\n",
+       "      <td>Amon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "      <td>historical</td>\n",
+       "      <td>r1i1p1f1</td>\n",
+       "      <td>tas</td>\n",
+       "      <td>gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...</td>\n",
+       "      <td>Amon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "      <td>historical</td>\n",
+       "      <td>r1i1p1f1</td>\n",
+       "      <td>huss</td>\n",
+       "      <td>gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...</td>\n",
+       "      <td>Amon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "      <td>historical</td>\n",
+       "      <td>r1i1p1f1</td>\n",
+       "      <td>rsds</td>\n",
+       "      <td>gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...</td>\n",
+       "      <td>Amon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ACCESS-CM2</td>\n",
+       "      <td>historical</td>\n",
+       "      <td>r1i1p1f1</td>\n",
+       "      <td>ps</td>\n",
+       "      <td>gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...</td>\n",
+       "      <td>Amon</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        model  experiment  ensemble variable  \\\n",
+       "0  ACCESS-CM2  historical  r1i1p1f1      vas   \n",
+       "1  ACCESS-CM2  historical  r1i1p1f1      uas   \n",
+       "2  ACCESS-CM2  historical  r1i1p1f1   tasmin   \n",
+       "3  ACCESS-CM2  historical  r1i1p1f1   tasmax   \n",
+       "4  ACCESS-CM2  historical  r1i1p1f1      tas   \n",
+       "5  ACCESS-CM2  historical  r1i1p1f1     huss   \n",
+       "6  ACCESS-CM2  historical  r1i1p1f1     rsds   \n",
+       "7  ACCESS-CM2  historical  r1i1p1f1       ps   \n",
+       "\n",
+       "                                              zstore domain  \n",
+       "0  gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...   Amon  \n",
+       "1  gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...   Amon  \n",
+       "2  gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...   Amon  \n",
+       "3  gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...   Amon  \n",
+       "4  gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...   Amon  \n",
+       "5  gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...   Amon  \n",
+       "6  gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...   Amon  \n",
+       "7  gs://cmip6/CMIP6/CMIP/CSIRO-ARCCSS/ACCESS-CM2/...   Amon  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pangeo_good_ensembles2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "8078431a-5aeb-4263-88df-42c58e0b2b4d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "model         8\n",
-       "experiment    8\n",
-       "ensemble      8\n",
-       "variable      8\n",
-       "zstore        8\n",
-       "domain        8\n",
+       "model         456\n",
+       "experiment    456\n",
+       "ensemble      456\n",
+       "variable      456\n",
+       "zstore        456\n",
+       "domain        456\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "id": "e5dbece8-eadb-4294-b644-fea2b71de09b",
    "metadata": {},
    "outputs": [
@@ -397,7 +565,7 @@
        "432"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "id": "4fea1f0d-dc81-4d57-bd3c-fa470ad54268",
    "metadata": {},
    "outputs": [
@@ -1356,7 +1524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
